--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "mui-datatables": "^2.6.4",
     "notistack": "^0.8.9",
     "react": "^16.8.6",
