--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
+    "jest-resolve": "^24.8.0",
     "mui-datatables": "^2.6.4",
     "notistack": "^0.8.9",
     "react": "^16.8.6",
@@ -17,9 +18,10 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14",
-    "simple-react-validator": "^1.2.0"
+    "simple-react-validator": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
